Refactored Gender to enum

--- a/UtopiaCity/wwwroot/CityAdministration/Edit.html
+++ b/UtopiaCity/wwwroot/CityAdministration/Edit.html
@@ -30,8 +30,8 @@
                         <div class="form-group col-md-12">
                             <label for="gender">Gender:</label>
                             <select name="gender" class="form-control">
-                                <option value="Male">Male</option>
-                                <option value="Female">Female</option>
+                                <option value="0">Male</option>
+                                <option value="1">Female</option>
                             </select>
                         </div>
                         <div class="form-group col-md-12">
