--- a/UtopiaCity/wwwroot/CityAdministration/Index.html
+++ b/UtopiaCity/wwwroot/CityAdministration/Index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container-fluid" style="padding:100px;">
-        <button type="button" class="btn btn-primary" style="width:100px" onclick="window.location.href = '/'">Home</button>
+        <button type="button" class="btn btn-primary" style="width:100px" onclick="window.location.href = '/CityAdministrationHome'">Home</button>
         <h2>Accounts List using WebAPI</h2>
         <button type="button" class="btn btn-primary" style="width:100px;" onclick="window.location.href = '/CityAdministration/Edit.html?Id=0'">Create</button>
         <div class="row">
