--- a/UtopiaCity/wwwroot/CityAdministration/Edit.html
+++ b/UtopiaCity/wwwroot/CityAdministration/Edit.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="form-group col-md-12">
                             <label for="birthDate">Birth Date:</label>
-                            <input id="birthDate" class="form-control" name="birthDate" type="date" />
+                            <input id="birthDate" class="form-control" name="birthDate" type="date" required/>
                         </div>
                         <div class="form-group col-md-12">
                             <label for="gender">Gender:</label>
