Added Swagger for ResidentAccountApi

--- a/UtopiaCity/wwwroot/CityAdministration/Index.html
+++ b/UtopiaCity/wwwroot/CityAdministration/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" rel="stylesheet" />
-    <title>Account List</title>
+    <title>Residents accounts</title>
 </head>
 <body>
     <div class="container-fluid" style="padding:100px;">
